--- a/src/styles/mixins.sass
+++ b/src/styles/mixins.sass
@@ -1,8 +1,5 @@
-::-webkit-scrollbar 
-  width: 4px
- 
-::-webkit-scrollbar-track
-  background: #ddd
-
-::-webkit-scrollbar-thumb 
-  background: #666
+@mixin gridPosition($rowStart, $rowEnd, $columnStart, $columnEnd)
+  grid-row-start: $rowStart
+  grid-row-end: $rowEnd
+  grid-column-start: $columnStart
+  grid-column-end: $columnEnd
